# zotero-arxiv-daily

./: .gitignore  Dockerfile  README.md  construct_email.py  docker-compose.yml  llm.py  main.py  paper.py  pyproject.toml  recommender.py  tldr.py
.github/: FUNDING.yml  keep-alive.txt
.github/workflows/: ci.yml  keep-alive.yml  main.yml  test.yml
assets/: use_docker.md
config/: base.yaml  custom.yaml  default.yaml
src/zotero_arxiv_daily/: construct_email.py  executor.py  main.py  protocol.py  utils.py
src/zotero_arxiv_daily/reranker/: __init__.py  api.py  base.py
src/zotero_arxiv_daily/retriever/: __init__.py  arxiv_retriever.py  base.py  biorxiv_retriever.py  medrxiv_retriever.py
tests/: conftest.py  test_email.py  test_glob_match.py  test_include_path.py  test_llm.py
tests/reranker/: test_api_reranker.py  test_local_reranker.py
tests/retriever/: arxiv_rss_example.xml  test_arxiv_retriever.py
tests/utils/mock_openai/: Dockerfile  openai_server.py
tests/utils/mock_zotero/: Dockerfile
